<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/set1"
            android:icon="@drawable/ic_home1"
            android:title="@string/set1" />
        <item
            android:id="@+id/set2"
            android:icon="@drawable/ic_pages"
            android:title="@string/set2" />
        <item
            android:id="@+id/set3"
            android:icon="@drawable/ic_photos"
            android:title="@string/set3" />
        <item
            android:id="@+id/set4"
            android:icon="@drawable/ic_whats_hot"
            android:title="@string/set4" />
        <item
            android:id="@+id/set5"
            android:icon="@drawable/ic_people"
            android:title="@string/set5" />
    </group>



</menu>
