<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_client2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.this_user.ourproject5778_9075_4711_02.controller.activities.AddClient">


    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/firstName"
        android:ems="10"
        android:id="@+id/firstName"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/lastName"
        android:ems="10"
        android:id="@+id/lastName"
        android:layout_below="@+id/firstName"
        android:layout_alignParentStart="true" />



    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/id"
        android:ems="10"
        android:id="@+id/id"
        android:layout_below="@+id/lastName"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"
        android:ems="10"
        android:id="@+id/phone"
        android:layout_below="@+id/id"
        android:layout_alignParentStart="true" />



    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/phone"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/creditCard"
        android:ems="10"
        android:id="@+id/credit"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/deatails4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="24dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/add"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/buttonAddClient"
        android:background="@color/colorAccent"
        android:drawableLeft="@drawable/ic_action_name"
        android:layout_below="@+id/credit"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp" />

</RelativeLayout>
