<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView

        android:text="@string/choose"
        android:textSize="24dp"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:id="@+id/textView5" />

    <Button
        android:text="@string/close"
        android:visibility="invisible"
        android:layout_width="210dp"
        android:drawableLeft="@drawable/ic_close"
        android:layout_height="wrap_content"
        android:id="@+id/close"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/listView"
        android:layout_marginBottom="19dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/update"
        android:ems="10"
        android:visibility="invisible"
        android:id="@+id/kiloup"
        android:layout_above="@+id/close"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:id="@+id/listView"
        android:layout_below="@+id/textView5"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/modelNameD"
        android:ems="10"
        android:visibility="invisible"
        android:id="@+id/parkb"
        android:layout_above="@+id/kiloup"
        android:layout_alignStart="@+id/listView"
        android:layout_marginBottom="14dp" />

    <TextView
        android:text="@string/selectBranch"
        android:layout_width="350dp"
        android:layout_height="33dp"
        android:id="@+id/textView2"
   android:visibility="invisible"
        android:layout_below="@+id/listView"
        android:layout_alignParentStart="true" />


</RelativeLayout>
