<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.this_user.ourproject5778_9075_4711_02.controller.activities.MainActivity">

    <TextView
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logintext"
        android:textSize="40dp"

        android:layout_marginTop="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/usernametext"
        android:layout_below="@+id/logintext"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:text="@string/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createtext"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/create_a_user"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/createbutton"

        android:textColor="@color/colorPrimaryDark"
        android:background="@android:color/transparent"
        android:layout_below="@+id/createtext"
        android:layout_alignStart="@+id/createtext" />

    <Button
        android:text="@string/sumbit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sumbitbutton"
        android:background="@color/colorPrimaryDark"
        android:layout_alignTop="@+id/createtext"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordtext"
        android:hint="@string/paassword"
        android:layout_below="@+id/usernametext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/play"
        android:id="@+id/play"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="12dp" />


</RelativeLayout>
