<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/addrsss_de"
        android:layout_width="350dp"
        android:drawableLeft="@drawable/ic_address"
        android:layout_height="35dp"
        android:layout_below="@+id/web_de"
        android:textSize="18dp"
        android:layout_alignStart="@+id/web_de"
        android:layout_marginTop="11dp"
        android:id="@+id/address_de"
        android:layout_alignEnd="@+id/web_de" />

    <Button
        android:text="@string/phone_de"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:id="@+id/phone_da"
        android:drawableLeft="@drawable/ic_phone"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/email_da"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/email_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_da"
        android:drawableLeft="@drawable/ic_email"
        android:background="@android:color/transparent"
        android:layout_marginTop="119dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/phone_da"
        android:layout_alignEnd="@+id/phone_da" />

    <TextView
        android:text="@string/web_de"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:id="@+id/web_de"

        android:textSize="18dp"
        android:drawableLeft="@drawable/ic_web"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/phone_da" />
</RelativeLayout>
